syntax = "proto3";

package adamant.teller.v1;

import "gincoinc/global/v1/gincoincglobalv1/enum.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/GincoInc/gew-kmp/gen/gincoinc/adamant/teller/v1/adamanttellerv1";

message TransferUpdated {
  string wallet_id = 1;
  string transfer_id = 2;
  gincoinc.global.v1.Coin coin = 3;
  string tx_id = 4;
  uint32 tx_index = 5;
  double value = 6;
  string string_value = 7;
  double jpy_rate = 8;
  string address = 9 [deprecated = true];
  uint32 destination_tag = 10;
  uint64 memo_id = 14;
  string message = 21;
  gincoinc.global.v1.TransactionState state = 11;
  gincoinc.global.v1.TransactionResult result = 12;
  gincoinc.global.v1.TransferType transfer_type = 13;
  string from = 15;
  string to = 16;
  google.protobuf.Timestamp time = 17;
  string event_id = 18;
  double fee = 19;
  string string_fee = 20;
}

// TODO deprecate
message TransferUpdateEvent {
  string event_id = 1;
  string wallet_id = 14;
  gincoinc.global.v1.Coin coin = 2;
  string tx_id = 3;
  uint32 tx_index = 4;
  double value = 5;
  string string_value = 6;
  double jpy_rate = 13;
  string address = 7;
  uint32 destination_tag = 8;
  uint64 memo_id = 15;
  gincoinc.global.v1.TransactionState state = 9;
  gincoinc.global.v1.TransactionResult result = 10;
  gincoinc.global.v1.TransferType transfer_type = 11;
  google.protobuf.Timestamp time = 12;
}

message StakingRewardWithdrew {
  string event_id = 1;
  uint64 index = 2;
  uint64 block_number = 3;
  google.protobuf.Timestamp block_time = 4;
  uint64 validator_index = 5;
  string address = 6;
  double amount = 7;
  string wallet_id = 8 [(validate.rules).string = {
    pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
  }];
}
